--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "iceberg-bp",
-  "description": "Front-End Starter for your Web Projects with React, Webpack, Babel and SASS",
+  "name": "react-starter-app",
+  "description": "Front-End Starter for your Web Projects with React, Webpack, Babel and SASS. (Inspire from iceberg-bp)",
   "version": "2.1.2",
-  "author": "Kevin Py",
+  "author": "Hein Hoang",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -14,7 +14,8 @@
   "scripts": {
     "clean": "rimraf dist",
     "build": "npm run clean && webpack -p",
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server --open",
+    "test": "make test"
   },
   "dependencies": {
     "babel-core": "^6.24.1",
@@ -41,7 +42,14 @@
     "webpack-dev-server": "^2.4.2"
   },
   "devDependencies": {
+    "babel-register": "^6.24.1",
+    "chromedriver": "^2.30.1",
+    "express": "^4.15.3",
+    "full-icu": "^1.1.3",
+    "ignore-styles": "^5.0.1",
+    "mocha": "^3.4.2",
     "rimraf": "^2.6.1",
+    "selenium-webdriver": "^3.4.0",
     "webpack": "^2.4.1"
   }
 }
