--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "test": "make test"
   },
   "dependencies": {
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-router-dom": "^4.1.1"
+  },
+  "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.2",
     "babel-loader": "^7.0.0",
@@ -32,16 +37,6 @@
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.2",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-router-dom": "^4.1.1",
-    "resolve-url-loader": "^2.0.2",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.16.1",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.2"
-  },
-  "devDependencies": {
     "babel-register": "^6.24.1",
     "chromedriver": "^2.30.1",
     "express": "^4.15.3",
@@ -50,6 +45,10 @@
     "mocha": "^3.4.2",
     "rimraf": "^2.6.1",
     "selenium-webdriver": "^3.4.0",
-    "webpack": "^2.4.1"
+    "resolve-url-loader": "^2.0.2",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.16.1",
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.2"
   }
 }
