--- a/package.json
+++ b/package.json
@@ -18,9 +18,21 @@
     "test": "make test"
   },
   "dependencies": {
+    "aor-language-french": "^1.8.0",
+    "history": "^4.6.3",
+    "material-ui": "^0.18.3",
+    "node-polyglot": "^2.2.2",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router-dom": "^4.1.1"
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.1",
+    "react-router-redux": "^4.0.8",
+    "react-tap-event-plugin": "^2.0.1",
+    "recompose": "^0.23.5",
+    "redux": "^3.7.0",
+    "redux-form": "^6.8.0",
+    "redux-saga": "^0.15.3"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
@@ -28,25 +40,28 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "chromedriver": "^2.30.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-react": "^6.10.3",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^5.0.1",
+    "eslint-plugin-react": "^7.0.1",
+    "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
-    "html-webpack-plugin": "^2.28.0",
-    "node-sass": "^4.5.2",
-    "babel-register": "^6.24.1",
-    "chromedriver": "^2.30.1",
-    "express": "^4.15.3",
     "full-icu": "^1.1.3",
+    "html-webpack-plugin": "^2.28.0",
     "ignore-styles": "^5.0.1",
     "mocha": "^3.4.2",
-    "rimraf": "^2.6.1",
-    "selenium-webdriver": "^3.4.0",
+    "node-sass": "^4.5.2",
     "resolve-url-loader": "^2.0.2",
+    "rimraf": "^2.6.1",
     "sass-loader": "^6.0.3",
+    "selenium-webdriver": "^3.4.0",
     "style-loader": "^0.16.1",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.2"
