--- a/package.json
+++ b/package.json
@@ -67,12 +67,14 @@
     "jsdom-global": "3.0.2",
     "mocha": "^3.4.2",
     "node-sass": "^4.5.2",
+    "react-router-dom": "^4.1.1",
     "react-test-renderer": "^15.6.1",
     "redux-mock-store": "^1.2.3",
     "resolve-url-loader": "^2.0.2",
     "rimraf": "^2.6.1",
     "sass-loader": "^6.0.3",
     "selenium-webdriver": "^3.4.0",
+    "sinon": "^2.3.5",
     "style-loader": "^0.16.1",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.2"
